# TedEval

./: .gitignore  .pre-commit-config.yaml  Makefile  NOTICE  README.MD  pyproject.toml  requirements-dev.txt  requirements.txt  tox.ini
static/: funcs.js  jquery-mousewheel.js  jquery-ui.min.css  jquery-ui.min.js  jquery.form-3.51.js  ranking.js  style.css  visualization.css  visualization_default.js
static_custom/: contents.txt  visualization_TL_iou.css  visualization_TL_iou.js
tedeval/: __init__.py  config.py  evaluate_fiftyone.py  evaluate_zip.py  logging.py  web.py
tedeval/utils/: points.py  zip.py
tedeval/web/: config.py  web.py
views/: index.tpl  method.tpl  sample.tpl  upload.tpl
