[tool.poetry]
name = "tedeval"
version = "0.1.0"
description = ""
readme = "README.md"
authors = []

packages = [{ include = "tedeval" }]


[tool.poetry.dependencies]
python = ">=3.9, <3.11"

# Core
numpy = "^1.26.1"
polygon3 = "^3.0.9.1"


[tool.poetry.group.dev.dependencies]
poetry = "^1.6.1"
pre-commit = "^3.3.3"

# Jupyter
jupyterlab = "^4.0.5"
ipywidgets = "^8.0.7"
jupyterlab-lsp = ">=4.2.0"
python-lsp-server = { extras = ["all"], version = "^1.7.4" }
jupyterlab-code-formatter = "^2.2.1"

# Linters
wemake-python-styleguide = "^0.18.0"
yesqa = "^1.5.0"
mypy = "^1.5.1"
vulture = "^2.8"
commitizen = "^3.9.0"

# Formatters
black = "^23.7.0"
isort = "^5.12.0"
pyupgrade = "^3.10.0"
nbqa = "^1.7.0"
nbstripout = "^0.6.1"


[tool.black]
line-length = 120
target-version = ["py38", "py39", "py310"]

[tool.isort]
profile = "wemake"
line_length = 120

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
allow_redefinition = true
warn_unused_ignores = true
show_error_codes = true
disable_error_code = ["index", "assignment", "call-overload"]

[tool.vulture]
paths = ["tedeval"]
min_confidence = 70
sort_by_size = true

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "semver"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
